--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-asset-rev": "^0.0.15",
+    "gulp-babel": "^7.0.0",
     "gulp-debug": "^3.1.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-minify-css": "^1.2.4",
